Deleting users segments
