# src/internal/controller/http/v1/usersSegment.go
@@ -19,12 +19,12 @@ type UsersSegmentsRoutes struct {
 	l  logger.Interface
 }
 
-type addUserToSegmentRequest struct {
-	Segments []string `json:"segments" binding:"required"  example:"[AVITO_VOICE_MESSAGES, AVITO_PERFORMANCE_VAS]" validate:"required"`
+type modifyUsersSegmentsRequest struct {
+	Segments []string `json:"segments" binding:"required"  example:"AVITO_VOICE_MESSAGES,AVITO_PERFORMANCE_VAS" validate:"required"`
 }
 
 type usersSegmentsResponse struct {
-	UsersSegments []string `json:"usersSegments" example:"[AVITO_VOICE_MESSAGES, AVITO_PERFORMANCE_VAS]"`
+	UsersSegments []string `json:"usersSegments" example:"AVITO_VOICE_MESSAGES,AVITO_PERFORMANCE_VAS"`
 }
 
 func SetUsersSegmentsRoutes(handler fiber.Router, u usecase.User, s usecase.Segment, us usecase.UsersSegment, l logger.Interface) {
@@ -35,8 +35,50 @@ func SetUsersSegmentsRoutes(handler fiber.Router, u usecase.User, s usecase.Segm
 		l:  l,
 	}
 	h := handler.Group("/users")
+	h.Get("/:userID/segments", r.get)
 	h.Post("/:userID/segments/add", middleware.GormTransaction(database.DB, l), r.add)
 	h.Post("/:userID/segments/delete", middleware.GormTransaction(database.DB, l), r.delete)
+}
+
+// @Summary     Get users segments
+// @Description Returns all users segments
+// @ID          getUsersSegments
+// @Tags  	    users
+// @Accept      json
+// @Produce     json
+// @Param 		userID path string true "user ID" example(1)
+// @Success     200 {object} Response{data=usersSegmentsResponse}
+// @Failure     400 {object} Response
+// @Failure     500 {object} Response
+// @Router      /users/:userID/segments [get]
+func (usr *UsersSegmentsRoutes) get(c *fiber.Ctx) error {
+
+	userID, err := strconv.ParseUint(c.Params("userID"), 10, 32)
+	if err != nil {
+		usr.l.Error(err, "v1 - get - strconv.ParseUint")
+		return ErrorResponse(c, fiber.StatusInternalServerError, MsgFailedToParseID, nil, err)
+	}
+
+	userExists, err := usr.u.UserExistsByID(uint(userID))
+	if err != nil && err != gorm.ErrRecordNotFound {
+		usr.l.Error(err, "v1 - get - usr.u.UserExistsByID")
+		return ErrorResponse(c, fiber.StatusInternalServerError, "Failed to check if user exists", nil, err)
+	}
+	if !userExists {
+		return ErrorResponse(c, fiber.StatusBadRequest, fmt.Sprintf("User with ID %d does not exist", userID), nil, ErrorUserDoesNotExist)
+	}
+
+	segments, err := usr.us.GetUsersSegments(uint(userID))
+	if err != nil && err != gorm.ErrRecordNotFound {
+		usr.l.Error(err, "v1 - get - usr.us.GetUsersSegments")
+		return ErrorResponse(c, fiber.StatusInternalServerError, "Failed to get users segments", nil, err)
+	}
+
+	response := &usersSegmentsResponse{
+		UsersSegments: segments,
+	}
+
+	return OkResponse(c, fiber.StatusOK, "OK", response)
 }
 
 // @Summary     Add to segments
@@ -45,13 +87,14 @@ func SetUsersSegmentsRoutes(handler fiber.Router, u usecase.User, s usecase.Segm
 // @Tags  	    users
 // @Accept      json
 // @Produce     json
-// @Param       request body addUserToSegmentRequest true "123"
-// @Success     200 {object} Response{data=usersSegmentsResponse, error=null}
+// @Param       request body modifyUsersSegmentsRequest true "Segments to add"
+// @Param 		userID path string true "user ID" example(1)
+// @Success     200 {object} Response{data=usersSegmentsResponse}
 // @Failure     400 {object} Response
 // @Failure     500 {object} Response
 // @Router      /users/:userID/segments/add [post]
 func (usr *UsersSegmentsRoutes) add(c *fiber.Ctx) error {
-	req := &addUserToSegmentRequest{}
+	req := &modifyUsersSegmentsRequest{}
 	if err := c.BodyParser(req); err != nil {
 		usr.l.Error(err, "v1 - add - c.BodyParser")
 		return ErrorResponse(c, fiber.StatusBadRequest, MsgInvalidRequestBody, nil, err)
@@ -92,16 +135,97 @@ func (usr *UsersSegmentsRoutes) add(c *fiber.Ctx) error {
 		_, err := usr.us.AddUserToSegment(uint(userID), slug)
 		if err != nil {
 			if err == usecase.ErrorUserAlreadyAdded {
-				return ErrorResponse(c, fiber.StatusInternalServerError, fmt.Sprintf("User is already added to %s", slug), nil, err)
+				return ErrorResponse(c, fiber.StatusBadRequest, fmt.Sprintf("User is already added to %s", slug), nil, err)
 			}
 			usr.l.Error(err, "v1 - add - usr.us.AddUserToSegment")
 			return ErrorResponse(c, fiber.StatusInternalServerError, fmt.Sprintf("Failed to add user to %s", slug), nil, err)
 		}
 	}
 
-	return OkResponse(c, fiber.StatusOK, "Added", nil)
+	segments, err := usr.us.GetUsersSegments(uint(userID))
+	if err != nil && err != gorm.ErrRecordNotFound {
+		usr.l.Error(err, "v1 - add - usr.us.GetUsersSegments")
+		return ErrorResponse(c, fiber.StatusInternalServerError, "Failed to get users segments", nil, err)
+	}
+
+	response := &usersSegmentsResponse{
+		UsersSegments: segments,
+	}
+
+	return OkResponse(c, fiber.StatusOK, "Added", response)
 }
 
+// @Summary     Delete from segment
+// @Description Deletes user from segment
+// @ID          deleteFromSegment
+// @Tags  	    users
+// @Accept      json
+// @Produce     json
+// @Param       request body modifyUsersSegmentsRequest true "Segments to delete"
+// @Param 		userID path string true "user ID" example(1)
+// @Success     200 {object} Response{data=usersSegmentsResponse}
+// @Failure     400 {object} Response
+// @Failure     500 {object} Response
+// @Router      /users/:userID/segments/delete [post]
 func (usr *UsersSegmentsRoutes) delete(c *fiber.Ctx) error {
-	return OkResponse(c, fiber.StatusOK, "Deleted", nil)
+
+	req := &modifyUsersSegmentsRequest{}
+	if err := c.BodyParser(req); err != nil {
+		usr.l.Error(err, "v1 - delete - c.BodyParser")
+		return ErrorResponse(c, fiber.StatusBadRequest, MsgInvalidRequestBody, nil, err)
+	}
+
+	isValid, errs := validations.UniversalValidation(req)
+	if !isValid {
+		return ErrorResponse(c, fiber.StatusBadRequest, MsgNotValid, errs, validations.ErrorValidationFailed)
+	}
+
+	userID, err := strconv.ParseUint(c.Params("userID"), 10, 32)
+	if err != nil {
+		usr.l.Error(err, "v1 - delete - strconv.ParseUint")
+		return ErrorResponse(c, fiber.StatusInternalServerError, MsgFailedToParseID, nil, err)
+	}
+
+	userExists, err := usr.u.UserExistsByID(uint(userID))
+	if err != nil && err != gorm.ErrRecordNotFound {
+		usr.l.Error(err, "v1 - delete - usr.u.UserExistsByID")
+		return ErrorResponse(c, fiber.StatusInternalServerError, "Failed to check if user exists", nil, err)
+	}
+	if !userExists {
+		return ErrorResponse(c, fiber.StatusBadRequest, fmt.Sprintf("User with ID %d does not exist", userID), nil, ErrorUserDoesNotExist)
+	}
+
+	for _, slug := range req.Segments {
+		segmentExists, err := usr.s.SegmentExists(slug)
+		if err != nil && err != gorm.ErrRecordNotFound {
+			usr.l.Error(err, "v1 - delete - usr.s.SegmentExists")
+			return ErrorResponse(c, fiber.StatusInternalServerError, "Failed to check if segment exists", nil, err)
+		}
+		if !segmentExists {
+			return ErrorResponse(c, fiber.StatusBadRequest, fmt.Sprintf("Segment with slug %s does not exist", slug), nil, ErrorSegmentDoesNotExist)
+		}
+	}
+
+	for _, slug := range req.Segments {
+		err := usr.us.DeleteUsersSegment(uint(userID), slug)
+		if err != nil {
+			if err == usecase.ErrorUserIsNotAddedToSegment {
+				return ErrorResponse(c, fiber.StatusBadRequest, fmt.Sprintf("User is not added to segment %s", slug), nil, err)
+			}
+			usr.l.Error(err, "v1 - delete - usr.us.AddUserToSegment")
+			return ErrorResponse(c, fiber.StatusInternalServerError, fmt.Sprintf("Failed to delete user from segment %s", slug), nil, err)
+		}
+	}
+
+	segments, err := usr.us.GetUsersSegments(uint(userID))
+	if err != nil && err != gorm.ErrRecordNotFound {
+		usr.l.Error(err, "v1 - add - usr.us.GetUsersSegments")
+		return ErrorResponse(c, fiber.StatusInternalServerError, "Failed to get users segments", nil, err)
+	}
+
+	response := &usersSegmentsResponse{
+		UsersSegments: segments,
+	}
+
+	return OkResponse(c, fiber.StatusOK, "Deleted", response)
 }
